# sudoku

./: README.md
sudoku_backend/: .gitignore  Board.cpp  CMakeLists.txt  Cell.cpp  Generator.cpp  SudokuResourceFactory.cpp  SudokuService.cpp  SudokuServiceSettingsFactory.cpp  main.cpp
sudoku_backend/include/: Board.h  Cell.h  DomainBoard.h  Generator.h  IResourceFactory.h  IService.h  IServiceSettingsFactory.h  Solver.h  SudokuResourceFactory.h  SudokuService.h  SudokuServiceSettingsFactory.h
sudoku_backend/src/: Board.cpp  CMakeLists.txt  Cell.cpp  DomainBoard.cpp  Generator.cpp  Solver.cpp  main.cpp
sudoku_backend/test/: CMakeLists.txt  boardtest.cpp  generatortest.cpp
sudoku_frontend/: package-lock.json  package.json
sudoku_frontend/public/: index.html
sudoku_frontend/src/: App.css  App.js  index.css  index.js  util.js
sudoku_frontend/src/components/Navigation/: MainMenu.css  MainMenu.jsx  Navigation.css  Navigation.jsx
sudoku_frontend/src/components/actionbar/: ActionBar.css  ActionBar.jsx
sudoku_frontend/src/components/board/: Board.css  Board.jsx
sudoku_frontend/src/components/cell/: Cell.css  Cell.jsx
sudoku_frontend/src/components/dropdown/: Dropdown.css  Dropdown.jsx
sudoku_frontend/src/components/game/: Congratulations.css  Congratulations.jsx  Game.css  Game.jsx  GameSettings.css  GameSettings.jsx
sudoku_frontend/src/components/generator/: Generator.css  Generator.jsx
sudoku_frontend/src/components/solver/: Solver.css  Solver.jsx
sudoku_frontend/src/components/ui/: Button.css  Button.jsx
sudoku_frontend/src/fonts/: fonts.css
sudoku_frontend/src/pages/: Home.js  Root.js
